--- a/style.css
+++ b/style.css
@@ -55,6 +55,7 @@ nav a
     justify-content: center;
     align-items: center;
     align-content: center;
+    box-shadow:1px 1px 2px gray;
     /* border: 2px solid red; */
 }
 .canvas-content
@@ -100,5 +101,63 @@ nav a
     color: white;
     background-color: #6D747D;
     text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     /* border: 2px solid red; */
+}
+
+
+
+.random-info
+{
+    height:400px;
+    display: flex;
+    flex-direction: column;
+    box-shadow:1px 1px 6px gray;
+    /* border: 2px solid royalblue; */
+}
+.random-info-header
+{
+    display: flex;
+    height: 80px;
+    justify-content: center;
+    align-items: center;
+    font-size: 26px;
+    font-weight: 900;
+    color: #1f2937;
+    text-align: center;
+    /* border: 2px solid crimson; */
+}
+.random-info-content
+{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
+    /* border: 2px solid royalblue; */
+}
+.cards
+{
+    display: flex;
+    flex-direction: column;
+    justify-items: center;
+    gap: 6px;
+    align-items: center;
+    /* border: 2px solid red; */
+    
+}
+.card-image
+{
+    height: 150px;
+    width: 150px;
+    border-radius: 10px;
+    border: 3px solid #3882f6;
+}
+.text
+{
+    width: 150px;
+    text-align: center;
+    color: #6D747D;
+    font-size: 15px;
 }
