--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body
 {
     display: flex;
     flex-direction: column;
-    height: 100vh;
+    /* height: 150vh; */
 }
 .header-logo
 {
@@ -80,7 +80,7 @@ nav a
 }
 .signup-btn
 {
-    margin-top: 10px;
+    margin-top: 16px;
     background-color: #3882f6;
     color: #F9FAF8;
     width: 100px;
@@ -111,7 +111,7 @@ nav a
 
 .random-info
 {
-    height:600px;
+    height:400px;
     display: flex;
     flex-direction: column;
     box-shadow:1px 1px 6px gray;
@@ -164,7 +164,7 @@ nav a
 
 .quote
 {
-    height: 400px;
+    height: 300px;
     background-color: #e5e7eb;
     display: flex;
     justify-content: center;
@@ -191,10 +191,54 @@ nav a
     text-align: right;
     font-weight: 900;
 }
-
+.signup
+{
+    display: flex;
+    height: 300px;
+    justify-content: center;
+    align-items:center ;
+    color: #F9FAF8;
+}
+.banner
+{
+    background-color: #3882f6;
+    border-radius: 8px;
+    height: 120px;
+    width: 850px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 200px;
+}
+.banner-content
+{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 6px;
+}
+.banner-header
+{
+    font-size: 18px;
+    font-weight: 900;
+}
+.signupbtn2
+{
+    width: 120px;
+    height: 30px;
+    border: 2px solid #F9FAF8;
+    background-color: #3882f6;
+    color: #F9FAF8;
+    border-radius: 6px;
+    font-weight: 900;
+}
+.signupbtn2:hover
+{
+    background-color: #79a3e7;
+}
 footer
 {
-    height: 100px;
+    height: 80px;
     background-color:#1f2937 ;
     display: flex;
     justify-content: center;
